Fixed mobile spacing issue

--- a/src/containers/HomePage/HomePage.css
+++ b/src/containers/HomePage/HomePage.css
@@ -20,7 +20,7 @@
 /* Responsive Styling */
 @media (max-width: 575.98px) {
     .Content {
-        margin: 3rem 0 0 0;
+        margin: 13rem 0 0 0;
     }
 }
 
